        * runtime dynamic libraries are loaded from lib_dirs of SPVM::Builder::Config of each class.
        * rename apeend_ccflags to add_ccflags, append_lddlflags to add_lddlflags
        * rename push_include_dirs to add_include_dirs, push_lib_dirs to add_lib_dirs, push_libs to add_libs, push_runtime_libs to add_libs
        * add_ccflags and add_lddlflags can receive list
        [BUG FIX]
        * add push_lib_dirs of SPVM::Builder::Config. This is documented but doesn't exist.
0.9018  2021-12-11
        [CHANGES]
        * Depends on ExtUtils::CBuilder for Perl 5.8
        
        [BUG FIXES]
        * Fix bugs that tests of SPVM fails in some old Perl version. 
0.9017  2021-12-11
        [CHANGES]
        * The parts of Makefile created by SPVM::Builder::Util::create_class_make_rule() become
          more compatible the Makefile created by ExtUtils::MakeMaker.
          This will maybe fix the fail of solaris make.
        
        [BUG FIXES]
        * Fix bugs that Fn->substr method is changed to Fn->methodstr by a mistake
        * Fix a bug that the return type of Fn->abs method was double. This become int type
        * Fix a bug that the return type of Fn->labs method was double. This become long type
        
0.9016  2021-12-08
        [CHANGES]
        * In Exchange API call method argument Perl refenrece to SPVM numeric reference convision,
          the Perl reference must be scalar reference which referenced value is non-ref scalar.
        * exchange api $string->to_string become croak if sv_utf8_docede fails.
        * exchange api $array->to_elemes in string[] set SPVM::Blessed::String object as the element.
        * add abs method to Fn module
        * add labs method to Fn module
        * add powi method to Fn module
        * add powl method to Fn module
        * remove SPVM::Math module from core. SPVM::Math is planed to be used as a CPAN module.